try and get stuff to fit on the page